projet/projet.sdk/.metadata/.plugins/org.eclipse.cdt.ui/cpu.build.log
15:12:50 **** Auto Build of configuration Debug for project cpu ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/main.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../cpu_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:28:2: warning: implicit declaration of function 'init_platform' [-Wimplicit-function-declaration]
  init_platform();
  ^~~~~~~~~~~~~
../src/main.c:206:2: warning: implicit declaration of function 'cleanup_platform' [-Wimplicit-function-declaration]
  cleanup_platform();
  ^~~~~~~~~~~~~~~~
../src/main.c: In function 'calculateLayer1':
../src/main.c:211:2: warning: implicit declaration of function 'memcpy' [-Wimplicit-function-declaration]
  memcpy(Layer1_Neurons_CPU, input, IMGWIDTH*IMGHEIGHT*sizeof(float));
  ^~~~~~
../src/main.c:211:2: warning: incompatible implicit declaration of built-in function 'memcpy'
../src/main.c:211:2: note: include '<string.h>' or provide a declaration of 'memcpy'
../src/main.c:1:1:
+#include <string.h>
 
../src/main.c:211:2:
  memcpy(Layer1_Neurons_CPU, input, IMGWIDTH*IMGHEIGHT*sizeof(float));
  ^~~~~~
../src/main.c:211:36: error: 'IMGWIDTH' undeclared (first use in this function)
  memcpy(Layer1_Neurons_CPU, input, IMGWIDTH*IMGHEIGHT*sizeof(float));
                                    ^~~~~~~~
../src/main.c:211:36: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c:211:45: error: 'IMGHEIGHT' undeclared (first use in this function)
  memcpy(Layer1_Neurons_CPU, input, IMGWIDTH*IMGHEIGHT*sizeof(float));
                                             ^~~~~~~~~
../src/main.c: In function 'calculateLayer2':
../src/main.c:224:50: warning: implicit declaration of function 'SIGMOID' [-Wimplicit-function-declaration]
     Layer2_Neurons_CPU[13*13*i+13*j+k] = (float) SIGMOID(somme);
                                                  ^~~~~~~
make: *** [src/subdir.mk:35: src/main.o] Error 1

15:12:51 Build Finished (took 272ms)

